--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -858,8 +858,8 @@ have been made to Spring's Web modules:
   `@RequestMapping` methods.
 * The `AsyncRestTemplate` class has been added, <<rest-async-resttemplate,allowing
   non-blocking asynchronous support>> when developing REST clients.
-* Spring now offers comprehensive timezone support when developing Spring MVC
-  applications.
+* Spring now offers <<mvc-timezone,comprehensive timezone support>> when developing
+  Spring MVC applications.
 
 
 === Other
@@ -7755,7 +7755,7 @@ The userDao argument is required.
 With regard to internationalization (i18n), Spring's various `MessageResource`
 implementations follow the same locale resolution and fallback rules as the standard JDK
 `ResourceBundle`. In short, and continuing with the example `messageSource` defined
-previously, if you want to resolve messages against the British (en-GB) locale, you
+previously, if you want to resolve messages against the British (`en-GB`) locale, you
 would create files called `format_en_GB.properties`, `exceptions_en_GB.properties`, and
 `windows_en_GB.properties` respectively.
 
@@ -27712,8 +27712,8 @@ This section concludes with coverage of Spring's MVC <<portlet,portlet framework
 === Introduction to Spring Web MVC framework
 The Spring Web model-view-controller (MVC) framework is designed around a
 `DispatcherServlet` that dispatches requests to handlers, with configurable handler
-mappings, view resolution, locale and theme resolution as well as support for uploading
-files. The default handler is based on the `@Controller` and `@RequestMapping`
+mappings, view resolution, locale, time zone and theme resolution as well as support for
+uploading files. The default handler is based on the `@Controller` and `@RequestMapping`
 annotations, offering a wide range of flexible handling methods. With the introduction
 of Spring 3.0, the `@Controller` mechanism also allows you to create RESTful Web sites
 and applications, through the `@PathVariable` annotation and other features.
@@ -27805,8 +27805,8 @@ Spring's web module includes many unique web support features:
   that mandate a particular technique.
 * __Flexible model transfer__. Model transfer with a name/value `Map` supports easy
   integration with any view technology.
-* __Customizable locale and theme resolution, support for JSPs with or without Spring
-  tag library, support for JSTL, support for Velocity without the need for extra
+* __Customizable locale, time zone and theme resolution, support for JSPs with or without
+  Spring tag library, support for JSTL, support for Velocity without the need for extra
   bridges, and so on.__
 * __A simple yet powerful JSP tag library known as the Spring tag library that provides
   support for features such as data binding and themes__. The custom tags allow for
@@ -28003,9 +28003,9 @@ see the table below listing the special bean types the `DispatcherServlet` relie
 | <<mvc-viewresolver,ViewResolver>>
 | Resolves logical String-based view names to actual `View` types.
 
-| <<mvc-localeresolver,LocaleResolver>>
-| Resolves the locale a client is using, in order to be able to offer internationalized
-  views
+| <<mvc-localeresolver,LocaleResolver>> & <<mvc-timezone,LocaleContextResolver>>
+| Resolves the locale a client is using and possibly their time zone, in order to be able
+  to offer internationalized views
 
 | <<mvc-themeresolver,ThemeResolver>>
 | Resolves themes your web application can use, for example, to offer personalized layouts
@@ -30522,12 +30522,25 @@ Spring.
 
 
 
+[[mvc-timezone]]
+==== Obtaining Time Zone Information
+In addition to obtaining the client's locale, it is often useful to know their time zone.
+The `LocaleContextResolver` interface offers an extension to `LocaleResolver` that allows
+resolvers to provide a richer `LocaleContext`, which may include time zone information.
+
+When available, the user's `TimeZone` can be obtained using the
+`RequestContext.getTimeZone()` method. Time zone information will automatically be used
+by Date/Time `Converter` and `Formatter` objects registered with Spring's
+`ConversionService`.
+
+
+
 [[mvc-localeresolver-acceptheader]]
 ==== AcceptHeaderLocaleResolver
-
 This locale resolver inspects the `accept-language` header in the request that was sent
 by the client (e.g., a web browser). Usually this header field contains the locale of
-the client's operating system.
+the client's operating system. __Note that this resolver does not support time zone
+information.__
 
 
 
@@ -30535,9 +30548,9 @@ the client's operating system.
 ==== CookieLocaleResolver
 
 This locale resolver inspects a `Cookie` that might exist on the client to see if a
-locale is specified. If so, it uses the specified locale. Using the properties of this
-locale resolver, you can specify the name of the cookie as well as the maximum age. Find
-below an example of defining a `CookieLocaleResolver`.
+`Locale` or `TimeZone` is specified. If so, it uses the specified details. Using the
+properties of this locale resolver, you can specify the name of the cookie as well as the
+maximum age. Find below an example of defining a `CookieLocaleResolver`.
 
 [source,xml,indent=0]
 [subs="verbatim,quotes"]
@@ -30579,8 +30592,8 @@ below an example of defining a `CookieLocaleResolver`.
 [[mvc-localeresolver-session]]
 ==== SessionLocaleResolver
 
-The `SessionLocaleResolver` allows you to retrieve locales from the session that might
-be associated with the user's request.
+The `SessionLocaleResolver` allows you to retrieve `Locale` and `TimeZone` from the
+session that might be associated with the user's request.
 
 
 
@@ -36801,6 +36814,7 @@ command object, if desired):
   native Servlet/Portlet API.
 * `java.util.Locale` for the current request locale (the portal locale in a Portlet
   environment).
+* `java.util.TimeZone` / `java.time.ZoneId` for the current request time zone.
 * `java.io.InputStream` / `java.io.Reader` for access to the request's content. This
   will be the raw InputStream/Reader as exposed by the Portlet API.
 * `java.io.OutputStream` / `java.io.Writer` for generating the response's content. This
